<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/yoda_btn"
            android:checked="true"
            android:icon="@drawable/ic_baseline_mic_none_24"
            android:title="@string/lang_yoda" />
        <item
            android:id="@+id/dotrakyan_btn"
            android:title="@string/lang_dotrakiyan" />
        <item
            android:id="@+id/orc_btn"
            android:title="@string/lang_orc" />
        <item
            android:id="@+id/minion_btn"
            android:title="@string/lang_minion" />
        <item
            android:id="@+id/doge_btn"
            android:title="@string/lang_doge" />
        <item
            android:id="@+id/valyrian_btn"
            android:title="@string/lang_valyrian" />
    </group>
</menu>